feat: adiciona endpoints para consultas de queimadas em biomas
