# server/api/controllers/queimadas/controller.ts
@@ -20,9 +20,11 @@ async function getSources(_: Request, res: Response) {
 }
 
 async function get(req: Request, res: Response) {
-  const criteria = req.params.municipio
-    ? { municipio: parseInt(req.params.municipio) }
-    : { estado: parseInt(req.params.estado) };
+  const criteria = {
+    municipio: req.params.municipio ? parseInt(req.params.municipio) : undefined,
+    estado: req.params.municipio ? parseInt(req.params.estado) : undefined,
+    bioma: req.params.bioma || undefined,
+  } as Parameters<typeof count>[0];
 
   const queimadasCount = await count(criteria);
 
